syntax = "proto3";

package bank;

option go_package = "./bank";

service TransactionService {
    rpc TransferRequest (TransactionRequest) returns (TransferResponse);
}

// This should be renamed to TransactionResponse
message TransferResponse {
    bool success = 1;
    string message = 2;
}

message TransactionRequest {
    Transaction transaction = 1;
    int64 timestamp = 2;
    string sender = 3;
}

message Transaction {
    string sender = 1;
    string receiver = 2;
    int64 amount = 3;
}